editor-components/stats/stats22/stats22.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
  .max-content {
    .wrapper {

      .left {

        .subtitle,
        .title,
        .description {
          content: "";
        }

        .button-container {
          display: flex;
          flex-wrap: wrap;
          gap: var(--composer-gap-sm);

          .button,
          .button-text {
            content: "";
          }
        }
      }

      .right {
        .description {
          content: "";
        }

        .stats-grid {
          gap: var(--composer-gap-lg);

          .card {
            display: flex;
            flex-direction: column;

            .stat-value {
              display: flex;
              align-items: baseline;

              .stat-prefix,
              .stat-number,
              .stat-suffix {
                font-size: 5rem;
                color: var(--composer-font-color-primary);
              }
            }

            .stat-subtitle {
              color: var(--composer-font-color-primary);
            }

            .stat-title {
              color: var(--composer-font-color-primary);
            }

            .stat-description {
              color: var(--composer-font-color-primary);
            }
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container .max-content .wrapper .right .stats-grid {
    .card .stat-value {
      .stat-prefix,
      .stat-number,
      .stat-suffix {
        font-size: 4rem;
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container .max-content .wrapper {
    flex-direction: column;
    .right {
      gap: var(--composer-gap-md);

      .stats-grid {
        .card .stat-value {
          .stat-prefix,
          .stat-number,
          .stat-suffix {
            font-size: 3rem;
          }
        }
      }
    }
  }
}

